# mlir-tutorial

./: .gitignore  build_mlir.sh  set_env.sh
ex3-dialect/: ex3.mlir
ex4-beautiful-dialect/: ex4.mlir
ex4-beautiful-dialect/lib/: toy.cpp
graph_game/: CMakeLists.txt  main.cpp
mlir-toy/: main.cpp
mlir-toy/.cache/clangd/index/: main.cpp.2781889DB3A7681B.idx
tablegen/: CMakeLists.txt
tablegen/include/toy/: CMakeLists.txt  Toy.td  ToyDialect.h  ToyOps.h  ToyOps.td
tablegen/lib/: toy.cpp
tablegen/tools/toy-opt/: CMakeLists.txt
